2016-October-24
- version 136
- finally squashed bug in gdsio::now
- mxlist.h: conform to C99 (default for GCC 5)
- Update README

2016-September-08
- version 135
- improve display methods to more closely conform to other display
  methods in Octave/Matlab (e.g., indent element data).
- remove superfluous ':' in display of reference elements.    

2016-September-06
- version 134
- new methods '@gds_structure/refrename.m' and '@gds_library/srename.m'
  to structures from a library together will all references to the structure.
- fix typo in 'Contents.m'
- improve methods that return gds_element properties with error checking.
- add '@gds_element/prop' method that returns user defined element properties.

2016-September-04
- version 133
- fix reading of element properties. Was completely broken.
- make writing of element properties safer by checking if
  'attr' and 'name' fields are present in a property structure during writing.
- fixed a bug in 'gdsio.c::now'.
- 'layerinfo' method for gds_structure objects.
- change display method for gds_element objects to display the number of
  elements in a compound element in brackets after the element type.
  Same style as in structure display method.          

2016-August-28
- version 132
- make 'layerinfo.m' a method of the gds_library class.
- fix spelling error in error message in '@gds_structure/add_element.m'

2016-August-24
- version 131
- fixed a bug in '@gds_structure/add_ref.m' that prevented passing
  of cell arrays with structure names.

2016-August-17
- version 130
- fix for longstanding bug in low level list handling (Florian Demski).
- in gds_open.c: ftell returns long int, not intmax_t

2016-May-11
- version 129
- fix bug that prevented creation of paths with width < 1 user unit

2016-January-01
- version 128
- fixed a regression in Basic/funcs/layerinfo.m
- further debugging of 'bbox' methods. Seem to be usable now.

2015-December-27
- version 127
- fixed numerous bugs in bbox methods. There are  bugs