@@ -17,7 +17,7 @@ function [tb_ver, sw_ver] = gdsii_version
 
     % toolbox version and version date
     tb_version = '136';
-    tb_date = '2016-October-24';
+    tb_date = '2016-November-04';
     ltb_ver = [tb_version, '  (', tb_date, ')'];
     if exist('OCTAVE_VERSION')
         interpreter = 'Octave';
